--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculator</title>
-    <style>
+     <style>
         td{
-            font-size: 25px;
             padding: 15px 15px 15px 15px;
-            margin: auto;
         }
         button{
             width: 40px;
             height: 40px;
         }
+        .text_area{
+            font-size: 20px;
+            margin-left: 15px;
+        }
     </style>
 </head>
 <body>
     <div>
+        <input type="text" class="text_area">
         <table>
             <tr>
                 <td><button>C</button></td>
